changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix examine_monster() to handle critically hit cases.
Nicolas Weeger 2010-09-06

Unit tests: correctly initialise the config dir (for experience and such).
Nicolas Weeger 2010-09-06

CRE: fix item's chance in treasure display. Show % and chance out of total.
Nicolas Weeger 2010-09-04

CRE: extract various things to 'ResourcesManager'.
This gets back archetypes and treasure sorting, without messing the
treasure list's ordering.
Nicolas Weeger 2010-09-04

Add key_value 'no_mood_change' that when set to 1 on a monster
prevents spells like charm or pacify to have any effect.
Nicolas Weeger 2010-09-04

Don't join party again at startup if formed automatically.
This leads to party removal, and memory corruption.
Nicolas Weeger 2010-09-02

Fix bug #3055569: godenchanting is still buggy.
The enchanting code was bypassing attacktypes if weapon was already enchanted.
Also fix wrong name check.
Nicolas Weeger 2010-09-02

Fix Python Object.Say to automatically use the dialog system if in a dialog context.
This makes the object talk after the player, like expected, without
needing to change all scripts.
Also, 'Say' is almost always used in reply to something said,
so it makes sense.
Nicolas Weeger 2010-09-02

Fix broken Python Object.Take (inverted parameters).
Nicolas Weeger 2010-09-02

server/player.c: Move clearing of monitor_spells to initial socket allocation.
Fixes bug where spell updates would cease if player used a savebed and
then played again on same server.
MSW 2010-08-30

Tentative fix for bug #3054686: unarmed combat xp goes to sorcery by default.